# clamp

./: CMakeLists.txt  LICENSE  generate_tests.py
src/array/: CMakeLists.txt  cl_array.c  cmake_install.cmake
src/include/array/: cl_array.h
src/include/common/: types.h
src/include/tensor/: cl_tensor.h
src/tensor/: CMakeLists.txt  cl_tensor.c  cmake_install.cmake
test/_internal/: test.c
test/src/array/: test_array.c
